<resources>
    <string name="app_name">Messages</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="start_title">Xabarlar almashinuvi. Ro\'yxatdan o\'ting yoki profilizga qaytadan kiring. Do\'stlaringizi bilan suxbatingizni davom ettring hamda yangi do\'stlar orttiring</string>
    <string name="text_start">Boshlash</string>
    <string name="text_sign_up">Ro\'yxatdan o\'tish</string>
    <string name="name">Ism:</string>
    <string name="second_name">Familya:</string>
    <string name="email">Email:</string>
    <string name="password">Parol:</string>
    <string name="equal_password">Parolni tekshirish:</string>
    <string name="edit_full_name">Ism va familyani tahrirlash</string>
    <string name="edit_profile_image">Profil rasmini o\'zgartirish</string>
    <string name="til_sozlamalari">Til sozlamalari</string>
    <string name="log_out">Chiqish</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message">Xabar...</string>
    <string name="text_sign_in">Profilga kirish</string>
    <string name="profilga_kirish">Profilga kirish</string>
    <string name="create_new_account">Yangi hisob yaratish</string>
    <string name="log_in_account">Hisobga kirish</string>
</resources>