<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_30"
    android:paddingHorizontal="16dp"
    tools:context=".ui.auth.sign_up.SignUpActivity">

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_sign_up">
        <LinearLayout
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:paddingBottom="80dp"
            android:visibility="visible"
            android:orientation="vertical"
            android:gravity="center">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_select_image_root"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp"
                app:cardBackgroundColor="@color/black_30">
                <ImageView
                    android:id="@+id/img_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/camera_1__photos_picture_camera_photography_photo_pictures"
                    android:layout_margin="20dp"/>
                <ImageView
                    android:id="@+id/btn_select_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/profile"
                    android:scaleType="centerCrop"
                    android:visibility="gone"/>
            </com.google.android.material.card.MaterialCardView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center">
                <View
                    android:layout_width="60dp"
                    android:layout_height="1dp"
                    android:background="@color/white"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_sign_up"
                    android:textColor="@color/white"
                    android:layout_marginHorizontal="16dp"
                    android:layout_weight="1.6"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="60dp"
                    android:layout_height="1dp"
                    android:background="@color/white"/>
            </LinearLayout>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="64dp"
                android:backgroundTint="@android:color/transparent"
                app:strokeWidth="1dp"
                app:strokeColor="@color/main_color"
                app:cardCornerRadius="8dp">
                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/name"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="#D2C6C0C0"
                    android:inputType="text"
                    tools:ignore="Autofill" />
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@android:color/transparent"
                app:strokeWidth="1dp"
                app:strokeColor="@color/main_color"
                app:cardCornerRadius="8dp">
                <EditText
                    android:id="@+id/et_second_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/second_name"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="#D2C6C0C0"
                    android:inputType="text"
                    tools:ignore="Autofill" />
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@android:color/transparent"
                app:strokeWidth="1dp"
                app:strokeColor="@color/main_color"
                app:cardCornerRadius="8dp">
                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/email"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="#D2C6C0C0"
                    android:inputType="textEmailAddress"
                    tools:ignore="Autofill" />
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@android:color/transparent"
                app:strokeWidth="1dp"
                app:strokeColor="@color/main_color"
                app:cardCornerRadius="8dp">
                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="#D2C6C0C0"
                    android:inputType="textPassword"
                    tools:ignore="Autofill" />
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@android:color/transparent"
                app:strokeWidth="1dp"
                app:strokeColor="@color/main_color"
                app:cardCornerRadius="8dp">
                <EditText
                    android:id="@+id/et_currect_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/equal_password"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="#D2C6C0C0"
                    android:inputType="textPassword"
                    tools:ignore="Autofill" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/main_color"
        android:text="@string/text_sign_up"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:visibility="visible"
        app:cornerRadius="8dp"/>
    <TextView
        android:id="@+id/btn_log_in_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_account"
        android:textColor="@color/main_color"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="12dp"/>
</RelativeLayout>
