<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_30"
    tools:context=".ui.profile.ProfilePageFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lotte_anim"
        android:layout_centerInParent="true"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:lottie_rawRes="@raw/loading"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/my_profile_ui"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <androidx.cardview.widget.CardView
            android:id="@+id/card_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="50dp">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/ll_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Rahmatov Sanjarbek"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:id="@+id/drive"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_below="@id/ll_full_name"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/edit_full_name"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/black_40"
            android:layout_below="@id/drive"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_weight="0.15"
                    android:src="@drawable/baseline_edit_24"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.85"
                    android:gravity="center_vertical"
                    android:text="@string/edit_full_name"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/edit_profile_image"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@id/edit_full_name"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/black_40"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_weight="0.15"
                    android:src="@drawable/edit_image_photo"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.85"
                    android:gravity="center_vertical"
                    android:text="@string/edit_profile_image"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/edit_language"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@id/edit_profile_image"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/black_40"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:layout_weight="0.15"
                    android:src="@drawable/baseline_language_24"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.85"
                    android:gravity="center_vertical"
                    android:text="@string/til_sozlamalari"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/log_out"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@id/edit_language"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@android:color/holo_red_dark"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="16dp"
                    android:layout_weight="0.15"
                    android:src="@drawable/logout_1__arrow_exit_frame_leave_logout_rectangle_right"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.85"
                    android:gravity="center_vertical"
                    android:text="@string/log_out"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>